fix: fixed api deeplinks, added alot of ux improvements
